CHANGE | Change owner name

--- a/k8s_manyfests/pod-web.yaml
+++ b/k8s_manyfests/pod-web.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     env: prod
     app: main
-    owner: "DiadykAndrii"
+    owner: "Diadyk_Andrii"
 spec:
   containers:
     - name: nginx-conteiner
